--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^3.1.1",
     "recharts": "^3.1.2",
     "redux": "^5.0.1",
     "sweetalert2": "^11.22.5",
